--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 .header .headerwrap{
     width:90%;
     margin:0 auto;
+    border:4px solid #BDE167;
 }
 .header .headerwrap .menubar{
     height:50px;
