--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,11 @@
 .header{
     height:100px;
     background-color:#192220;
+    border-bottom:3px solid #BDE167;
 }
 .header .headerwrap{
     width:90%;
     margin:0 auto;
-    border:4px solid #BDE167;
 }
 .header .headerwrap .menubar{
     height:50px;
